axion-telemetry-query-service/Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axion-telemetry-ingress
  namespace: default
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: "/health"
    appgw.ingress.kubernetes.io/health-probe-port: "8000"
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-399"

spec:
  ingressClassName: azure-application-gateway

  rules:
    - host: telemetry.b18g151.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: axion-telemetry-query-service
                port:
                  number: 80
